2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/functions_api.php
	include/functions_incidents.php
	include/functions_db.php: Fixed several bugs of the 
	Web API integration with Pandora. Returning more 
	info of the Incident creation and more fixes 

2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	include/js/integria_incident_search.js
	operation/incidents/incident_attach_file.php: Fixed 
	some style errors for IE and size of upload file dialog

	* include/functions_api.php: Fixed group asignation
	when create a incident without group

2012-01-23  Sergio Martin <sergio.martin@artica.es>

	* include/js/jquery.axuploader.js: Fixed IE8 ajax
	error in the uploader for missed quote
	* operation/incidents/incident_attach_file.php: Reduce one row
	the textarea of file description to allow the new file loader size

2012-01-20  Sergio Martin <sergio.martin@artica.es>

	* include/styles/integria.css
	include/js/jquery.axuploader.js: Fixed ugly styles
	in the file uploader in chrome

2012-01-19  Sancho Lerena <slerena@artica.es>

	* DEBIAN/control
        DEBIAN/make_deb_package.sh
        extras/build_deb.sh: changes for Debian packaging.

	* integria.fedora.spec: New spec for RHEL/Fedora.

	* integria.spec: Updated Spec for SUSE

	* integria_demo.sql: Updated SQL for demo (was broken).

	* extras/build_src.sh,
	extras/build_rpm.sh: Updated RPM build/SRC scripts.

	* upgrade.sql: Deleted old stuff.

	* integria_db.sql,
	upgrade_to_3.0.sql: Title of incident now is a mediumtext.

	* integria_update: Script to update the code.
	
	* upgrade_to_3.0.sql,
	integria_db.sql: Tinventory description was too short !!.
	
	* functions_db.php: Fixed get_user_groups() to put all available 
	groups in admin users. Created get_user_groups_for_sql() to generate
	a list of available groups for a given user_id. removed function
	get_inventories() and move to functions_inventory.php.
		
	* functions_inventory. Moved here get_inventories().
	