@@ -115,7 +115,6 @@ if ($operation == ""){
 	
 	$action = "index.php?sec=customers&sec2=operation/invoices/invoices&id_company=$id_company";
 	
-	echo "<form method=post action='$action'>";
 	$table->id = 'cost_form';
 	$table->width = '90%';
 	$table->class = 'listing';
@@ -131,9 +130,8 @@ if ($operation == ""){
 	$table->data[2][0] = __('Description');
 	$table->data[2][1] = print_input_text ('description', $description, '', 60, 250, true);
 	
-	$into_form =  '<input type="button" id="button-upload" name="upload" value="'.__('Upload').'" class="sub next">';
 	$table->data[3][0] = __('Attach a file');
-	$table->data[3][1] = print_input_file_progress($action, $into_form, 'id="form-add-file"', 'sub next', 'button-upload', true);
+	$table->data[3][1] = '__UPLOAD_CONTROL__';
 
 	$table->data[4][0] = __('Invoice creation date');
 	$table->data[4][1] = print_input_text ('invoice_create_date', $invoice_create_date, '', 15, 50, true);
@@ -141,20 +139,24 @@ if ($operation == ""){
 	$table->data[5][0] = __('Invoice effective payment date');
 	$table->data[5][1] = print_input_text ('invoice_payment_date', $invoice_payment_date, '', 15, 50, true);
 
+	$into_form = print_table ($table, true);
 
-	print_table ($table);
-	
-	echo '<div class="button" style="width: '.$table->width.'">';
-	if ($id_invoice == "") {
-		print_submit_button (__('Add'), "crt", false, 'class="sub next"');
-		print_input_hidden ('operation', "add");
+	$into_form .= '<div class="button" style="width: '.$table->width.'">';
+	if ($operation == "") {
+		$into_form .= print_button (__('Add'), "crt", false, '', 'class="sub next"', true);
+		$into_form .= print_input_hidden ('operation', "add", true);
+		$button_name = "button-crt";
 	} else {
-		print_input_hidden ('id_invoice', $id_invoice);
-		print_input_hidden ('operation', "update");
-		print_submit_button (__('Update'), "upd", false, 'class="sub upd"');
+		$into_form .= print_input_hidden ('id', $id_profile, true);
+		$into_form .= print_input_hidden ('update_profile', 1, true);
+		$into_form .= print_button (__('Update'), "upd", false, '', 'class="sub upd"', true);
+		$button_name = "button-upd";
 	}
+	$into_form .= "</div>";	
+	
+	print_input_file_progress($action, $into_form, 'id="form-add-file"', 'sub next', $button_name, false, '__UPLOAD_CONTROL__');
+
 	echo "</div>";
-	echo "</form></div>";
 	
 }
 ?>
